[package]
name = "aget-rs"
version = "0.3.8"
authors = ["Jingcheng Yang <yjcyxky@163.com>"]
homepage = "https://github.com/yjcyxky/biominer-aget"
description = "BioMiner Aget - Fast Asynchronous Downloader for Omics Data Files"
license = "MIT/Apache-2.0"
readme = "README.md"
categories = ["command-line-utilities", "asynchronous", "download"]
keywords = [
    "download",
    "network",
    "asynchronous",
    "tool",
]
edition = "2021"

[[bin]]
name = "aget"
path = "src/main.rs"

[[bin]]
name = "biominer-aget"
path = "src/indexd_main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# for async
futures = "0.3"
actix-rt = "2.7"

# for http
http = "0.2"
url = "2"
openssl = { version = "0.10", features = ["vendored"] }
awc = { version = "3", features = ["rustls", "compress-brotli", "compress-gzip", "compress-zstd"] }
actix-http = { version = "3", features = ["rustls", "compress-brotli", "compress-gzip", "compress-zstd"] }

# for errors
thiserror = "1.0"

# for crypto
aes = "0.8"
cbc = { version = "0.1", features = ["alloc", "block-padding"] }

# utilities
term_size = "0.3"
ansi_term = "0.12"
percent-encoding = "2"
bytes = "1"
clap = { version = "3", features = ["derive", "cargo"] }
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
dirs = "4.0"

# for m3u8
m3u8-rs = "4"

# for indexd
reqwest = { version = "0.11.9", features = ["blocking"]}
regex = "1"
log = "0.4"
log4rs = "1.0.0"
lazy_static = "1.3"
serde_json = "1.0.79"
structopt = {version = "0.3", default-features = false}

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
